--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @import "~react-image-gallery/styles/css/image-gallery.css";
 :root,
 body {
   margin: 0 auto;
   padding: 0;
   overflow-x: hidden;
+}
+
+input::placeholder {
+  font-family: "Roboto", sans-serif;
+}
+
+input:focus,
+input:active {
+  outline: none;
 }
